--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
   </p>
 
   <p id="treemap">
-    <center><div style="background-color:lightgrey; height: 100px; width: 800px;">
+    <center><div style="background-color:lightgrey; height: 200px; width: 800px;">
       <h4>Hover to see tree information!</h6>
       <p>Name: <span id="name"></span></p>
       <p>Trees Planted: <span id="planted"></span></p>
+      <p>Most Common Trees: <span id="common"></span></p>
+      <p>Least Common Trees: <span id="uncommon"></span></p>
     </div></center>
     <center><svg id="treemap" width="800" height="800"></svg></center>
   </p>
@@ -185,6 +187,7 @@
           }).number++;
         }
       });
+
       // console.log(treeArray);
 
 
@@ -329,13 +332,30 @@
           return ntaColorScale(d.value)
         })
         .on("mouseover", function(d) {
-          d3.select("#name").text(d.data.name);
+          var boroughName = d.data.name;
+          d3.select("#name").text(boroughName);
           d3.select("#planted").text(d.data.value);
           d3.select(this).style("stroke", "yellow").style("stroke-width", 4);
+          boroughData = (tree.filter(d => d['nta_name'] === boroughName));
+          var boroughByTree = d3.nest()
+            .key(function(d) { return d.spc_common; })
+            .rollup(function(v) {return v.length;})
+            .entries(boroughData);
+
+          var sorted = boroughByTree.sort(function(x,y) {
+            return d3.descending(x.value, y.value);
+          });
+          var common = sorted.slice(0,3);
+          var uncommon = sorted.slice(-3);
+          console.log();
+          d3.select("#common").text(common[0].key + " (" + common[0].value + "), " + common[1].key + " (" + common[1].value + "), " + common[2].key + " (" + common[2].value + "), ");
+          d3.select("#uncommon").text(uncommon[0].key + " (" + uncommon[0].value + "), " + uncommon[1].key + " (" + uncommon[1].value + "), " + uncommon[2].key + " (" + uncommon[2].value + "), ");
         })
         .on("mouseout", function(d) {
           d3.select("#name").text("");
           d3.select("#planted").text("");
+          d3.select("#common").text("");
+          d3.select("#uncommon").text("");
           d3.select(this).style("stroke", "black").style("stroke-width", 1);
         });
         // search to get here BOI
