--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <p id="treemap">
     <center><div style="background-color:lightgrey; height: 200px; width: 800px;">
       <h4>Hover to see tree information!</h6>
-      <p>Name: <span id="name"></span></p>
+      <p>Neighborhood: <span id="name"></span></p>
       <p>Trees Planted: <span id="planted"></span></p>
       <p>Most Common Trees: <span id="common"></span></p>
       <p>Least Common Trees: <span id="uncommon"></span></p>
