--- a/index.html
+++ b/index.html
@@ -182,21 +182,12 @@ body {
 
       const pop = await d3.csv("./zip_code_database_pop.csv");
 
-      // console.log(zip.features);
-      // console.log(zip.features['properties']['postalCode']);
-
       const zipMax = d3.max(zip.features, d => d['properties']['postalCode']);
       const zipMin = d3.min(zip.features, d => d['properties']['postalCode'])
-      // console.log(zipMax);
-      // console.log(zipMin);
-      // console.log(tree);
 
       const zipTreeMax = d3.max(tree, d => Number(d['postcode']));
       const zipTreeMin = d3.min(tree, d => Number(d['postcode']));
       const treeMinMax = d3.extent(tree, d => Number(d['postcode']));
-      // console.log(zipTreeMax);
-      // console.log(zipTreeMin);
-      // console.log(treeMinMax);
 
       var treeArray = [];
       const treeMap = new Map();
@@ -218,16 +209,6 @@ body {
         }
       });
 
-      // console.log(treeArray);
-
-
-      // nest it
-      // var entries = d3.nest()
-      //                 // .key(function(d) { return d['state']; })
-      //                 .key(function(d) { return d['borough']; })
-      //                 .key(function(d) { return d['nta_name']; })
-      //                 .rollup(function(leaves) { return leaves.length; })
-      //                 .entries(tree);
       var entries = {
         "key": "nyc",
         "values": d3.nest()
@@ -243,7 +224,6 @@ body {
           })
           .entries(tree)
       }
-      console.log(entries);
 
       var treeData = {
         "name": "nyc",
@@ -263,10 +243,7 @@ body {
 
         }) //end of map(function(major){
       }; //end of var declaration
-      // var data = {"key": "nyc", "values": entries};
-      // console.log(data);
 
-      // console.log(treeData);
       var type = {
         "key": "nyc",
         "values": d3.nest()
@@ -279,7 +256,6 @@ body {
           })
           .entries(tree)
       }
-      // console.log(type);
 
       var typeTree = {
         "name": "nyc",
@@ -290,7 +266,7 @@ body {
           };
         })
       };
-      // console.log(JSON.stringify(typeTree));
+
       var color = d3.scaleOrdinal(['#4daf4a','#377eb8','#ff7f00','#984ea3','#e41a1c']);
       var width = 800;
       var height = 800;
@@ -320,12 +296,10 @@ body {
 
 
       var typeRoot = d3.hierarchy(typeTree).sum(d => d.value);
-      // console.log(typeRoot.leaves());
 
       var test = await d3.json("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/data_dendrogram_full.json");
       var root = d3.hierarchy(treeData)
         .sum(function(d) {
-          // console.log(d);
 
           return d.value;
         })
@@ -385,7 +359,7 @@ body {
           });
           var common = sorted.slice(0,3);
           var uncommon = sorted.slice(-3);
-          // console.log();
+
           d3.select("#common").text(common[0].key + " (" + common[0].value + "), " + common[1].key + " (" + common[1].value + "), " + common[2].key + " (" + common[2].value + "), ");
           d3.select("#uncommon").text(uncommon[0].key + " (" + uncommon[0].value + "), " + uncommon[1].key + " (" + uncommon[1].value + "), " + uncommon[2].key + " (" + uncommon[2].value + "), ");
         })
@@ -398,12 +372,9 @@ body {
           d3.select(this).style("stroke", "black").style("stroke-width", 1);
         });
         // search to get here BOI
-        // console.log(root.leaves());
-        //Trees by Population Graph
 
-        console.log(treeArray.find(function(n) {
-          return n.postcode == 83;
-        }))
+
+        //Trees by Population Graph
 
         //array of all zip codes
         var all_zip = [];
@@ -416,7 +387,6 @@ body {
 
         //array of just nyc zip codes
         nyc_pop = pop.filter(d => all_zip.includes(d['zip']));
-        console.log(nyc_pop);
 
         //array of tree frequency and population data for all neighborhoods
         var tree_and_pop = [];
@@ -465,14 +435,17 @@ body {
             .attr("x2", popScale(d['pop']))
             .attr("y1", heightPop)
             .attr("y2", treeScale(d['number']))
-            .style("stroke", "#5555F0")
-            .style("stroke-width", 6)
-
+            .style("stroke", "green")
+            .style("stroke-width", 2)
             .on("mouseover", function() {
-                console.log("nothing yet");
+                d3.select(this)
+                .style("stroke", "yellow")
+                .style("stroke-width", 4);
             })
             .on("mouseout", function(d) {
-              //
+              d3.select(this)
+                .style("stroke", "green")
+                .style("stroke-width", 2);
             })
             .attr("transform", "translate(0, "+(-40) +")");
           });
@@ -588,13 +561,8 @@ body {
           return d['number'];
         }
       })
-      // console.log(treeNumMinMax);
-      // console.log(ManhattanMinMax);
 
       var treeColorScale = d3.scaleSequential(d3.interpolateGreens).domain([7, treeNumMinMax[1] / 5]);
-      // console.log(treeArray.find(function(n) {
-      //   return n.postcode == 83;
-      // }));
 
       function showTrees() {
         // drawLegend(maxAll, scaleAll);
@@ -608,12 +576,12 @@ body {
             return "poly" + i;
           })
           .style("fill", function(d, i) {
-            // console.log(d);
+
             // var id = d.properties.OBJECTID;
             var num = treeArray.find(function(n) {
               return n.postcode == Number(d.properties.postalCode);
             });
-            // console.log(num);
+
             if (num != undefined) {
               return treeColorScale(num.number);
             } else if (num == 0)
